# nb

./: .gitignore  README.md  pyproject.toml  test.py
cs2130/: final.ipynb
ds2022/: Case_study_6.ipynb  case6.ipynb
ds2023/class/1006/: W07-10-06-M-activity2.ipynb
ds2023/class/1008/: W07-10-06-M-activity2.ipynb
ds2023/class/1010/: FOO-wine-country-variety.graphml  W07-02-TidyToGraphs.ipynb  W07-F-activity1.ipynb  wine-taster-country.graphml
ds2023/class/1024/: W09-02-Vietnam.ipynb
ds2023/class/1103/: Nightingale.ipynb
ds2023/class/1107/: W11-F-activity.ipynb
ds2023/class/1112/: W12-W-Activity.ipynb  W2-W-CodeWakPitching.ipynb  pitch-types.csv
ds2023/class/1117/: W13-01-InteractiveViz.ipynb  W13-M-Activity.ipynb  pitching-sample.csv
ds2023/class/1119/: W13-F-Activity-Voila.ipynb  W13-M-Activity.ipynb
ds2023/final/affinity/: infographic.af
ds2023/final/data/: data.csv
ds2023/final/nb/: establish_data.ipynb  (+3 more)
ds2026/class/: 2017_2018.ipynb
ds2026/hw/: bayes.ipynb  chapter8.ipynb  final.ipynb  graphs.ipynb  mm.ipynb  pexam1.ipynb  practice_exam2.ipynb  roulette.ipynb  twelve.ipynb
ds3021/: 0105.py  0120.ipynb  0120.py  0122.py  get_data.py
ds3021/data/: weapons-trade-register.csv
ds3021/hw/: hw1.py
ds3025/class/: 0115.py  0122.py  120.py  mmids.py
ds3025/lab/: lab1.ipynb  lab1.py  lab1_26.py
econ3110/assignments/: midterm.ipynb  p11.ipynb  ps10.html  ps10.ipynb  ps12.html  ps12.ipynb  ps5.html  ps5.ipynb  ps6.html  ps6.ipynb  ps7.html  ps7.ipynb  ps8.html  ps8.ipynb  ps9.html  ps9.ipynb
econ3110/guides/: graphs.ipynb  woo.ipynb
(+39 files in other folders)
