[project]
name = "nb"
version = "0.1.0"
description = "my personal notebookes for a bunch of classes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "marimo[pdf]>=0.19.2",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "ruff>=0.14.13",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
